--- a/weshare/src/components/css/styles.css
+++ b/weshare/src/components/css/styles.css
@@ -1,5 +1,5 @@
 .bgimage{
-    background: url('../images/humanitario-pano.webp') center 30% / cover no-repeat fixed;
+    background: url('../../../public/humanitario-pano.webp') center 30% / cover no-repeat fixed;
     height: 350px;
 }
 
