add footer e depoimentos

--- a/weshare/src/components/css/styles.css
+++ b/weshare/src/components/css/styles.css
@@ -23,4 +23,39 @@
     /* Outros estilos que você deseja remover ou modificar */
 }
 
+/*
+.large-card {
+    width: 300px;
+    height: 400px;
+  }
+  
+  .large-card img {
+    height: 200px;
+    object-fit: cover;
+  }
+  */
 
+  .large-card {
+    width: 300px;
+    height: auto; /* Ajusta a altura automaticamente com base no conteúdo */
+  }
+  
+  .large-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+  .card-title a {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .text-center {
+    text-align: center;
+  }
+  
+  .text-justify {
+    text-align: justify;
+  }
+  
