--- a/weshare/src/components/css/styles.css
+++ b/weshare/src/components/css/styles.css
@@ -47,16 +47,25 @@
   }
   */
 
-  .card-title a {
-    text-decoration: none;
-    color: inherit;
-  }
+.card-title a {
+  text-decoration: none;
+  color: inherit;
+}
   
-  .text-center {
-    text-align: center;
-  }
+.text-center {
+  text-align: center;
+}
   
-  .text-justify {
-    text-align: justify;
-  }
+.text-justify {
+  text-align: justify;
+}
   
+/* styles.css ou outro arquivo CSS */
+.nav-pills .nav-link {
+  margin-right: 10px; /* Adiciona espaçamento entre os itens */
+}
+
+.nav-pills .nav-link:last-child {
+  margin-right: 0; /* Remove o espaçamento do último item */
+}
+
